--- a/10X程序员工作法.md
+++ b/10X程序员工作法.md
@@ -40,5 +40,77 @@ DoD可以分为很多类，如：
 - 一次迭代的DoD，此次迭代规划的所有个功能都完成了。
 - 一次发布的DoD ，整个软件处于可发布的状态，上线计划已经明确
 
+# 用户故事
+
+- 标题
+- 概述
+  - As a (role), i want to (activity), so that (business value)
+- 详述
+- 验收标准
+  - 异常流程的描述
+  - 最基本的测试用例，保证开发人员完成需求最基本的质量
+
+扮演不同的角色，对问题的思考是不同的。最好维护的代码是还没有写的代码。
+
+# 持续集成和持续交付
+
+尽早把代码和已有代码集成到一起，而不应该等着所有代码都开发完了，再去做提交
+
+在软件开发中，编写代码是很重要的一环，但程序员的交付物并不应该是代码，而是一个可工作的软件。当我们在一个团队中工作的时候，把不同人的代码放在一起，使之成为一个可工作软件的过程就是集成。
+
+行业最佳实践-持续集成，即每次提交代码都集成
+
+# 默认什么需求都不做，直到弄清楚为什么做这件事
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
