--- a/设计模式学习.md
+++ b/设计模式学习.md
@@ -314,10 +314,610 @@ public class Application {
 ## 依赖反转原则
 
 - 控制翻转IOC
+
+  框架提供了一个可扩展的骨架，用来组装对象，管理执行流程。利用框架的时候，只需要往预留的扩展点添加业务代码，依靠框架驱动流程执行。
+
+  “控制”是指对程序流程的控制，“反转”是指在没使用框架之前，所有流程都自己控制，使用框架之后，流程交给框架控制。
+  实现控制反转的方法很多，模板设计模式、依赖注入等，因此它并不是一种具体的实现技巧，而是比较笼统的设计思想，一般用来指导框架层面的设计。
+
+  ```java
+  public abstract class TestCase {
+    public void run() {
+      if (doTest()) {
+        System.out.println("Test succeed.");
+      } else {
+        System.out.println("Test failed.");
+      }
+    }
+    
+    public abstract boolean doTest();
+  }
+  
+  public class JunitApplication {
+    private static final List<TestCase> testCases = new ArrayList<>();
+    
+    public static void register(TestCase testCase) {
+      testCases.add(testCase);
+    }
+    
+    public static final void main(String[] args) {
+      for (TestCase case: testCases) {
+        case.run();
+      }
+    }
+    
+  public class UserServiceTest extends TestCase {
+    @Override
+    public boolean doTest() {
+      // ... 
+    }
+  }
+  
+  JunitApplication.register(new UserServiceTest();  
+  ```
+
+  
+
 - 依赖注入DI
+
+  不通过new()的方式在类的内部创建依赖类对象，而是将依赖的类对象在外部创建好之后， 通过构造函数、函数参数等方式传递（注入）给类使用。
+
+  通过依赖注入的方式将依赖的类对象传递进来，提高了代码的扩展性，灵活的替换依赖的类。
+
+  ```java
+  // 非依赖注入实现方式
+  public class Notification {
+    private MessageSender messageSender;
+    
+    public Notification() {
+      this.messageSender = new MessageSender(); //此处有点像hardcode
+    }
+    
+    public void sendMessage(String cellphone, String message) {
+      //...省略校验逻辑等...
+      this.messageSender.send(cellphone, message);
+    }
+  }
+  
+  public class MessageSender {
+    public void send(String cellphone, String message) {
+      //....
+    }
+  }
+  // 使用Notification
+  Notification notification = new Notification();
+  
+  // 依赖注入的实现方式
+  public class Notification {
+    private MessageSender messageSender;
+    
+    public Notification(MessageSender messageSender) {
+      this.messageSender = messageSender;
+    }
+    
+    public void sendMessage(String cellphone, String message) {
+      this.messageSender.send(cellphone, message);
+    }
+  }
+  
+  public interface MessageSender {
+    void send(String cellphone, String message);
+  }
+  
+  // 短信发送类
+  public class SmsSender implements MessageSender {
+    @Override
+    public void send(String cellphone, String message) {
+      //....
+    }
+  }
+  
+  // 站内信发送类
+  public class InboxSender implements MessageSender {
+    @Override
+    public void send(String cellphone, String message) {
+      //....
+    }
+  }
+  
+  //使用Notification
+  MessageSender messageSender = new SmsSender();
+  Notification notification = new Notification(messageSender);
+  ```
+
 - 依赖注入框架DI Framework
+
+  中大型的项目可能涉及几百上千个类，类对象的创建和依赖注入会非常复杂，而这些工作与具体的业务无关，可以抽象成框架自动完成。这个框架就是依赖注入框架。通过依赖注入框架提供的扩展点，配置所有需要创建买的类、对象和依赖关系，由框架实现创建对象、管理对象的声明周期、依赖注入等事情。
+
+  常见的框架有：Google Guice、Java Spring等。
+
 - 依赖反转原则DIP
 
+  高层模块不要依赖低层模块。高层模块和低层模块应该通过抽象来相互依赖，抽象不要依赖具体实现细节，具体实现细节依赖抽象。一般来说，高层属于调用者，低层属于被调用者。这条原则主要用来指导框架层面的设计。
+
+  例如：Tomcat是运行Java Web应用程序的容器。Tomcat就是高层，Web应用就是低层。Tomcat和Web应用之前没有直接依赖，两者都依赖一个抽象，即Servlet规范。Servlet规范不依赖具体的Tomcat容器和Web应用的实现细节。
+
+## KISS原则
+
+尽量保持简单。Keep it simple and stupid。
+
+什么样的代码才是simple 和 stupid？
+
+- 行数越少越简单？
+
+  ```java
+  // 第一种实现方式: 使用正则表达式
+  public boolean isValidIpAddressV1(String ipAddress) {
+    if (StringUtils.isBlank(ipAddress)) return false;
+    String regex = "^(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|[1-9])\\."
+            + "(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|\\d)\\."
+            + "(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|\\d)\\."
+            + "(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|\\d)$";
+    return ipAddress.matches(regex);
+  }
+  
+  // 第二种实现方式: 使用现成的工具类
+  public boolean isValidIpAddressV2(String ipAddress) {
+    if (StringUtils.isBlank(ipAddress)) return false;
+    String[] ipUnits = StringUtils.split(ipAddress, '.');
+    if (ipUnits.length != 4) {
+      return false;
+    }
+    for (int i = 0; i < 4; ++i) {
+      int ipUnitIntValue;
+      try {
+        ipUnitIntValue = Integer.parseInt(ipUnits[i]);
+      } catch (NumberFormatException e) {
+        return false;
+      }
+      if (ipUnitIntValue < 0 || ipUnitIntValue > 255) {
+        return false;
+      }
+      if (i == 0 && ipUnitIntValue == 0) {
+        return false;
+      }
+    }
+    return true;
+  }
+  
+  // 第三种实现方式: 不使用任何工具类
+  public boolean isValidIpAddressV3(String ipAddress) {
+    char[] ipChars = ipAddress.toCharArray();
+    int length = ipChars.length;
+    int ipUnitIntValue = -1;
+    boolean isFirstUnit = true;
+    int unitsCount = 0;
+    for (int i = 0; i < length; ++i) {
+      char c = ipChars[i];
+      if (c == '.') {
+        if (ipUnitIntValue < 0 || ipUnitIntValue > 255) return false;
+        if (isFirstUnit && ipUnitIntValue == 0) return false;
+        if (isFirstUnit) isFirstUnit = false;
+        ipUnitIntValue = -1;
+        unitsCount++;
+        continue;
+      }
+      if (c < '0' || c > '9') {
+        return false;
+      }
+      if (ipUnitIntValue == -1) ipUnitIntValue = 0;
+      ipUnitIntValue = ipUnitIntValue * 10 + (c - '0');
+    }
+    if (ipUnitIntValue < 0 || ipUnitIntValue > 255) return false;
+    if (unitsCount != 3) return false;
+    return true;
+  }
+  ```
+
+  通常来说第二种才是符合kiss原则的。第一种和第三种都比较难维护，容易产生bug。
+
+- 代码逻辑复杂就违背kill原则？
+
+  KMP算法就比较复杂且难懂，但其处理的是本身就复杂的问题，比如几百MB文本内容大小的匹配，因此并不违背。
+
+如何写出满足KISS的代码？
+
+1. 尽量不要使用同时可能不懂的技术来实现代码，比如正则表达式或者过于高级的语法。
+2. 尽量不要重复造轮子，善于使用已有的工具类库。
+3. 尽量不要过度优化，当性能瓶颈不在这里或投入产出比不大的时候，没必要使用位运算、低层函数等优化代码，牺牲可读性。
+4. code review时，如果疑问较多，可能就不够kiss，反之则然。
+5. 一定不要过度设计，越能用简单的方法解决复杂的问题，越体现能力。
+
+## YAGNI原则
+
+You Ain't gonna need it。你不需要它。
+
+不要设计当前不用的功能，不要写当前用不到的代码，总结一句话就是不要过度设计。
+
+比如使用Redis做配置，后续可能使用Zookeeper，现在就没必要写关于Zookeeper的代码，但可以预留扩展点，等需要的时候，再进行扩展。
+
+## DRY原则
+
+Don't repeat yourself。不要重复你自己。
+
+- 实现逻辑重复
+
+  ```java
+  public class UserAuthenticator {
+    public void authenticate(String username, String password) {
+      if (!isValidUsername(username)) {
+        // ...throw InvalidUsernameException...
+      }
+      if (!isValidPassword(password)) {
+        // ...throw InvalidPasswordException...
+      }
+      //...省略其他代码...
+    }
+  
+    private boolean isValidUsername(String username) {
+      // check not null, not empty
+      if (StringUtils.isBlank(username)) {
+        return false;
+      }
+      // check length: 4~64
+      int length = username.length();
+      if (length < 4 || length > 64) {
+        return false;
+      }
+      // contains only lowcase characters
+      if (!StringUtils.isAllLowerCase(username)) {
+        return false;
+      }
+      // contains only a~z,0~9,dot
+      for (int i = 0; i < length; ++i) {
+        char c = username.charAt(i);
+        if (!(c >= 'a' && c <= 'z') || (c >= '0' && c <= '9') || c == '.') {
+          return false;
+        }
+      }
+      return true;
+    }
+  
+    private boolean isValidPassword(String password) {
+      // check not null, not empty
+      if (StringUtils.isBlank(password)) {
+        return false;
+      }
+      // check length: 4~64
+      int length = password.length();
+      if (length < 4 || length > 64) {
+        return false;
+      }
+      // contains only lowcase characters
+      if (!StringUtils.isAllLowerCase(password)) {
+        return false;
+      }
+      // contains only a~z,0~9,dot
+      for (int i = 0; i < length; ++i) {
+        char c = password.charAt(i);
+        if (!(c >= 'a' && c <= 'z') || (c >= '0' && c <= '9') || c == '.') {
+          return false;
+        }
+      }
+      return true;
+    }
+  }
+  ```
+
+  修改之后
+
+  ```java
+  public class UserAuthenticatorV2 {
+  
+    public void authenticate(String userName, String password) {
+      if (!isValidUsernameOrPassword(userName)) {
+        // ...throw InvalidUsernameException...
+      }
+  
+      if (!isValidUsernameOrPassword(password)) {
+        // ...throw InvalidPasswordException...
+      }
+    }
+  
+    private boolean isValidUsernameOrPassword(String usernameOrPassword) {
+      //省略实现逻辑
+      //跟原来的isValidUsername()或isValidPassword()的实现逻辑一样...
+      return true;
+    }
+  }
+  ```
+
+  修改之后更好了吗，减少了代码重复。答案是否定的，因为原先的两个函数语义不重复，从功能上来看，干的是完全不重复的事情。将两个函数合并，未来可能会出现校验的情况不同，还是需要修改。因此原来的代码不违反DRY原则。对于重复代码的问题，可以抽取更细粒度的校验方法通用。
+
+- 功能语义重复
+
+  ```java
+  public boolean isValidIp(String ipAddress) {
+    if (StringUtils.isBlank(ipAddress)) return false;
+    String regex = "^(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|[1-9])\\."
+            + "(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|\\d)\\."
+            + "(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|\\d)\\."
+            + "(1\\d{2}|2[0-4]\\d|25[0-5]|[1-9]\\d|\\d)$";
+    return ipAddress.matches(regex);
+  }
+  
+  public boolean checkIfIpValid(String ipAddress) {
+    if (StringUtils.isBlank(ipAddress)) return false;
+    String[] ipUnits = StringUtils.split(ipAddress, '.');
+    if (ipUnits.length != 4) {
+      return false;
+    }
+    for (int i = 0; i < 4; ++i) {
+      int ipUnitIntValue;
+      try {
+        ipUnitIntValue = Integer.parseInt(ipUnits[i]);
+      } catch (NumberFormatException e) {
+        return false;
+      }
+      if (ipUnitIntValue < 0 || ipUnitIntValue > 255) {
+        return false;
+      }
+      if (i == 0 && ipUnitIntValue == 0) {
+        return false;
+      }
+    }
+    return true;
+  }
+  ```
+
+  两个方法虽然实现不同，但功能相同，这种就违反了DRY原则。考虑可能出现这种情况，未来校验添加了逻辑，只改了其中一个，另一个忘了，导致使用的时候就会出现问题。而且当后来人维护的时候，发现两个功能相同的函数会摸不着头脑，令人费解。
+
+- 代码执行重复
+
+```java
+public class UserService {
+  private UserRepo userRepo;//通过依赖注入或者IOC框架注入
+
+  public User login(String email, String password) {
+    boolean existed = userRepo.checkIfUserExisted(email, password);
+    if (!existed) {
+      // ... throw AuthenticationFailureException...
+    }
+    User user = userRepo.getUserByEmail(email);
+    return user;
+  }
+}
+
+public class UserRepo {
+  public boolean checkIfUserExisted(String email, String password) {
+    if (!EmailValidation.validate(email)) {
+      // ... throw InvalidEmailException...
+    }
+
+    if (!PasswordValidation.validate(password)) {
+      // ... throw InvalidPasswordException...
+    }
+
+    //...query db to check if email&password exists...
+  }
+
+  public User getUserByEmail(String email) {
+    if (!EmailValidation.validate(email)) {
+      // ... throw InvalidEmailException...
+    }
+    //...query db to get user by email...
+  }
+}
+```
+
+重复校验。优化如下
+
+```java
+public class UserService {
+  private UserRepo userRepo;//通过依赖注入或者IOC框架注入
+
+  public User login(String email, String password) {
+    if (!EmailValidation.validate(email)) {
+      // ... throw InvalidEmailException...
+    }
+    if (!PasswordValidation.validate(password)) {
+      // ... throw InvalidPasswordException...
+    }
+    User user = userRepo.getUserByEmail(email);
+    if (user == null || !password.equals(user.getPassword()) {
+      // ... throw AuthenticationFailureException...
+    }
+    return user;
+  }
+}
+
+public class UserRepo {
+  public boolean checkIfUserExisted(String email, String password) {
+    //...query db to check if email&password exists
+  }
+
+  public User getUserByEmail(String email) {
+    //...query db to get user by email...
+  }
+}
+```
+
+## 迪米特法则LOD
+
+Low of Demeter。The least knowledge principle。最小知识原则。
+
+每个模块应该只了解哪些与它关系密切的模块的有限知识。之和朋友说话，不和陌生人说话。它可以分为两部分来看：
+
+1. 不该有直接依赖关系的类之间，不要有依赖；
+
+```java
+public class NetworkTransporter {
+    // 省略属性和其他方法...
+    public Byte[] send(HtmlRequest htmlRequest) {
+      //...
+    }
+}
+
+public class HtmlDownloader {
+  private NetworkTransporter transporter;//通过构造函数或IOC注入
+  
+  public Html downloadHtml(String url) {
+    Byte[] rawHtml = transporter.send(new HtmlRequest(url));
+    return new Html(rawHtml);
+  }
+}
+
+public class Document {
+  private Html html;
+  private String url;
+  
+  public Document(String url) {
+    this.url = url;
+    HtmlDownloader downloader = new HtmlDownloader();
+    this.html = downloader.downloadHtml(url);
+  }
+  //...
+}
+```
+
+这里有个形象的比喻。假如你现在要去商店买东西，你肯定不会直接把钱包给收银员，让收银员自己从里面拿钱，而是你从钱包里把钱拿出来交给收银员。这里的 HtmlRequest 对象就相当于钱包，HtmlRequest 里的 address 和 content 对象就相当于钱。我们应该把 address 和 content 交给 NetworkTransporter，而非是直接把 HtmlRequest 交给 NetworkTransporter。根据这个思路，NetworkTransporter 重构之后的代码如下所示
+
+```java
+public class NetworkTransporter {
+    // 省略属性和其他方法...
+    public Byte[] send(String address, Byte[] data) {
+      //...
+    }
+}
+public class HtmlDownloader {
+  private NetworkTransporter transporter;//通过构造函数或IOC注入
+  
+  // HtmlDownloader这里也要有相应的修改
+  public Html downloadHtml(String url) {
+    HtmlRequest htmlRequest = new HtmlRequest(url);
+    Byte[] rawHtml = transporter.send(
+      htmlRequest.getAddress(), htmlRequest.getContent().getBytes());
+    return new Html(rawHtml);
+  }
+}
+
+public class Document {
+  private Html html;
+  private String url;
+  
+  public Document(String url, Html html) {
+    this.html = html;
+    this.url = url;
+  }
+  //...
+}
+
+// 通过一个工厂方法来创建Document
+public class DocumentFactory {
+  private HtmlDownloader downloader;
+  
+  public DocumentFactory(HtmlDownloader downloader) {
+    this.downloader = downloader;
+  }
+  
+  public Document createDocument(String url) {
+    Html html = downloader.downloadHtml(url);
+    return new Document(url, html);
+  }
+}
+```
+
+2. 有依赖关系的类之间，尽量只依赖必要的接口。
+
+```java
+public class Serialization {
+  public String serialize(Object object) {
+    String serializedResult = ...;
+    //...
+    return serializedResult;
+  }
+  
+  public Object deserialize(String str) {
+    Object deserializedResult = ...;
+    //...
+    return deserializedResult;
+  }
+}
+```
+
+有些场景不需要序列化，只需要反序列化，因此优化如下
+
+```java
+public class Serializer {
+  public String serialize(Object object) {
+    String serializedResult = ...;
+    ...
+    return serializedResult;
+  }
+}
+
+public class Deserializer {
+  public Object deserialize(String str) {
+    Object deserializedResult = ...;
+    ...
+    return deserializedResult;
+  }
+}
+```
+
+但这样违反迪米特法则，相近的功能放在一个类里，因此再次优化
+
+```java
+public interface Serializable {
+  String serialize(Object object);
+}
+
+public interface Deserializable {
+  Object deserialize(String text);
+}
+
+public class Serialization implements Serializable, Deserializable {
+  @Override
+  public String serialize(Object object) {
+    String serializedResult = ...;
+    ...
+    return serializedResult;
+  }
+  
+  @Override
+  public Object deserialize(String str) {
+    Object deserializedResult = ...;
+    ...
+    return deserializedResult;
+  }
+}
+
+public class DemoClass_1 {
+  private Serializable serializer;
+  
+  public Demo(Serializable serializer) {
+    this.serializer = serializer;
+  }
+  //...
+}
+
+public class DemoClass_2 {
+  private Deserializable deserializer;
+  
+  public Demo(Deserializable deserializer) {
+    this.deserializer = deserializer;
+  }
+  //...
+}
+```
+
+基于最小接口而非最大实现编程
+
+
+
+
+
+- 高内聚、低耦合是什么？
+
+  高内聚低耦合是一种设计思想，可以指导系统、模块、类、函数、微服务、框架、组件、类库等等。可以有效提高代码可读性和可维护性，缩小功能改动导致的代码改动范围。
+
+  以类作为参考对象，高内聚是指相近的功能应该放到同一个类中，不相近的不要放进来。因为相近的功能往往会被同时修改，放到一个类中，修改会比较集中，更容易维护。松耦合是指，类与类纸之间的依赖关系简单清晰。即使两个类有依赖关系，一个类的改动不会或者很少导致依赖类的代码改动。
+
+  两者并非完全独立不相干。高内聚有助于松耦合，松耦合有需要高内聚的支持。
+
+  高内聚低耦合的代码结构更简单清晰，相应地在可维护和可读性上要好很多。
+
+  
 
 
 
@@ -337,6 +937,56 @@ public class Application {
 
 
 
+
+
+
+
+
+
+
+
+
+
+# 代码复用性
+
+## 上面一直在说代码复用性，到底什么才是代码复用性？
+
+- 代码复用性、代码复用、DRY原则 
+
+  代码复用是一种行为，尽量复用已有的代码。代码复用性是代码可被复用的特性或能力，尽量使代码可复用。DRY原则，不要写重复的代码。
+
+  1. 不重复 != 可复用
+  2. 复用和可复用性关注点不同。复用是从使用者角度来看，可复用性是从开发者的角度来看。
+
+​	关注点不同，但目的都是为了减少代码量、提高可读性、可维护性
+
+- 如何提高代码复用性？
+
+  - 减少代码耦合
+
+  - 满足单一原则
+
+  - 模块化
+
+    善于将功能独立的代码封装成模块。
+
+  - 业务与非业务逻辑分离
+
+    与业务越无关越容易复用，越针对业务越难复用。非业务相关的代码抽成通用的框架、类库、组件等
+
+  - 通用代码下沉
+
+    越低层的代码越通用。代码分层之后，为了比较交叉调用，导致关系混乱。只允许上层调用下层，杜绝下层调用上层。
+
+  - 继承、多态、抽象、封装
+
+    继承将公用代码抽取到父类，子类复用父类属性和方法；多态替换一段代码逻辑，让其复用；越抽象、越不依赖具体的实现，越容易复用；封装成模块，隐藏可变细节，暴露不变接口，越容易复用。
+
+  - 应用模板等设计模式
+
+- 辩证思考，灵活运用
+
+  当下如果没有复用的需求，为了暂时用不到的需求，花费太多精力、时间、成本，违反YAGNI原则，不值得推荐。另外，有一个Rule of Tree原则，意思是第一次写的时候，未来复用需求不明确，开发复用代码成本较高，这时就不需要考虑复用性。在之后开发新功能的时候，发现可以复用之前的代码，那就重构这段代码，使其可复用。
 
 
 
@@ -373,7 +1023,10 @@ public class Application {
 
   - 充血适合复杂的业务逻辑，如各种李鑫计算模型、还款模型等复杂业务的金融系统
 
-    
+
+
+
+
 
 
 
