--- a/设计模式学习.md
+++ b/设计模式学习.md
@@ -903,10 +903,6 @@ public class DemoClass_2 {
 
 基于最小接口而非最大实现编程
 
-
-
-
-
 - 高内聚、低耦合是什么？
 
   高内聚低耦合是一种设计思想，可以指导系统、模块、类、函数、微服务、框架、组件、类库等等。可以有效提高代码可读性和可维护性，缩小功能改动导致的代码改动范围。
@@ -1022,6 +1018,60 @@ public class DemoClass_2 {
   - 贫血适合简单的CRUD相关操作，没有复杂的业务逻辑
 
   - 充血适合复杂的业务逻辑，如各种李鑫计算模型、还款模型等复杂业务的金融系统
+
+# 实战
+
+## 需求分析
+
+- 用户故事
+
+## 系统设计
+
+1. 合理的将功能划分到不同模块
+
+   类比面向对象，面向对象是将合适的代码放到合适的类中，类与类之间的交互简单清晰，代码结构一目了然，合理的划分代码可以实现代码的高内聚低耦合。系统设计就是将合适的功能放到合适的模块中，做到模块层面的高内聚、低耦合，架构整洁清晰。
+
+2. 设计模块和模块之间的交互关系
+
+   常见的系统交互有同步接口调用和异步接口调用（消息中间件），异步解耦效果更好。一般了六安，上下层系统之间的调用倾向于同步接口，同层之间的调用倾向于异步调用。
+
+3. 设计模块的接口、数据库、业务模型
+
+## 代码实现
+
+- 为什么要分MVC三层开发？
+
+  1. 分层可以起到代码复用的作用。一个repository可能被service使用，一个service可能被多个controller使用，不分层可能得在多个controller中都实现一遍，违反DRY原则。
+
+  2. 分层体现了抽象和封装的设计思想。repository封装了数据库访问的操作，提供了抽象的数据访问接口，基于接口而非实现的编程思想，service使用这些接口不关心低层依赖什么库，改动时只需要改repository即可。三层的稳定程度不同、引起变化的原因不同，分成三层能有效地隔离变化。
+
+  3. 分层起到隔离关注点的作用
+
+     repository只关注数据读写。service只关注业务逻辑，不关注数据来源。controller只关注与外界打交道，数据校验、封装、格式转换，不关心业务实现逻辑。分层后，职责更加明确，符合单一职责原则，代码内聚性更好。
+
+  4. 分层提高代码可测试性
+
+  5. 分层能应对系统的复杂性
+
+     代码放在一个类中，会因为需求迭代逐渐膨胀。而代码过多导致可读性、可维护性变差，就需要进行拆分，垂直和水平两种方式拆分。水平拆分基于业务来拆，也就是模块化；垂直基于流程拆分，也就是分层。
+
+- BO、VO、Entity存在的意义是什么 ？
+  - 从设计角度来说，VO、BO、Entity的设计思路并不违反DRY原则，为了分层清晰，减少耦合，多维护几个类的成本可以接收。对于代码重复的问题，可以使用继承、组合来解决。
+  - 数据之间的转换可以 使用工具类，如BeanUtils等
+  - 尽管违背OOP的封装特性，有随意被修改的风险。但Entiry和VO的生命周期有限，仅在本层范围内，相对来说是安全的。
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
