--- a/设计模式学习.md
+++ b/设计模式学习.md
@@ -6,13 +6,13 @@
 
 ## 抽象：如何隐藏方法的具体实现
 
-​	只需了解接口暴露了哪些方法，无需查看类的具体实现逻辑。
+只需了解接口暴露了哪些方法，无需查看类的具体实现逻辑。
 
-​	设计思路：只关注功能点，不关注实现，过滤许多非必要的信息。
+设计思路：只关注功能点，不关注实现，过滤许多非必要的信息。
 
-​	基于接口的抽象，可以在不改变原有实现的情况下，轻松替换新的实现逻辑，提高可扩展性。
+基于接口的抽象，可以在不改变原有实现的情况下，轻松替换新的实现逻辑，提高可扩展性。
 
-​	例如：定义方法名或类名的时候，不要暴露太多细节，以保证后续改变实现逻辑的时候，无需修改其定义。
+例如：定义方法名或类名的时候，不要暴露太多细节，以保证后续改变实现逻辑的时候，无需修改其定义。
 
 ## 继承：复用
 
@@ -1066,7 +1066,7 @@ public class DemoClass_2 {
 
 
 
-
+# 25 26章总结
 
 
 
