--- a/设计模式学习.md
+++ b/设计模式学习.md
@@ -324,9 +324,9 @@ public class Application {
   public abstract class TestCase {
     public void run() {
       if (doTest()) {
-        System.out.println("Test succeed.");
+        System.out.println("IdGenerator succeed.");
       } else {
-        System.out.println("Test failed.");
+        System.out.println("IdGenerator failed.");
       }
     }
     
@@ -917,6 +917,50 @@ public class DemoClass_2 {
 
 
 
+# 什么情况下要重构？到底重构什么？应该如何重构？
+
+- 重构的目的：对项目来说，重构使代码不至于腐化到无可救药的程度。对个人来说，实践学习到的设计模式、设计原则、规范等，有助于提高个人编程水平。
+
+- 重构的对象：大规模高层次的重构，代码分层、模块化、解耦、梳理类的交互关系、抽象复用组件等。小规模低层次的重构，命名规范、注释、函数参数过多、超大类简化、抽取复用代码等等。
+
+- 重构的时机：日常开发发现不太合理的代码就主动尝试进行
+
+- 重构的方法：大规模需要有资深业务参与，有组织、有计划的迭代进行，使代码处于可用状态。小规模重构有时间就可以搞。
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1033,7 +1077,7 @@ public class DemoClass_2 {
 
 2. 设计模块和模块之间的交互关系
 
-   常见的系统交互有同步接口调用和异步接口调用（消息中间件），异步解耦效果更好。一般了六安，上下层系统之间的调用倾向于同步接口，同层之间的调用倾向于异步调用。
+   常见的系统交互有同步接口调用和异步接口调用（消息中间件），异步解耦效果更好。一般来说，上下层系统之间的调用倾向于同步接口，同层之间的调用倾向于异步调用。
 
 3. 设计模块的接口、数据库、业务模型
 
@@ -1058,7 +1102,7 @@ public class DemoClass_2 {
 - BO、VO、Entity存在的意义是什么 ？
   - 从设计角度来说，VO、BO、Entity的设计思路并不违反DRY原则，为了分层清晰，减少耦合，多维护几个类的成本可以接收。对于代码重复的问题，可以使用继承、组合来解决。
   - 数据之间的转换可以 使用工具类，如BeanUtils等
-  - 尽管违背OOP的封装特性，有随意被修改的风险。但Entiry和VO的生命周期有限，仅在本层范围内，相对来说是安全的。
+  - 尽管违背OOP的封装特性，有随意被修改的风险。但Entity和VO的生命周期有限，仅在本层范围内，相对来说是安全的。
 
 
 
@@ -1066,7 +1110,255 @@ public class DemoClass_2 {
 
 
 
-# 25 26章总结
+
+
+# 夺命连环问
+
+1. 目录设置是否合理、模块划分是否清晰、代码结构是否满足“高内聚、松耦合”？
+2. 是否遵循经典的设计原则和设计思想（SOLID、DRY、KISS、YAGNI、LOD 等）？
+3. 设计模式是否应用得当？是否有过度设计？
+4. 代码是否容易扩展？如果要添加新功能，是否容易实现？
+5. 代码是否可以复用？是否可以复用已有的项目代码或类库？是否有重复造轮子？
+6. 代码是否容易测试？单元测试是否全面覆盖了各种正常和异常的情况？
+7. 代码是否易读？是否符合编码规范（比如命名和注释是否恰当、代码风格是否一致等）？
+8. 代码是否实现了预期的业务需求？
+9. 逻辑是否正确？是否处理了各种异常情况？
+10. 日志打印是否得当？是否方便 debug 排查问题？
+11. 接口是否易用？是否支持幂等、事务等？
+12. 代码是否存在并发问题？是否线程安全？
+13. 性能是否有优化空间，比如，SQL、算法是否可以优化？
+14. 是否有安全漏洞？比如输入输出校验是否全面？
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 异常
+
+对于代码 bug（比如数组越界）以及不可恢复异常（比如数据库连接失败），即便我们捕获了，也做不了太多事情，所以，我们倾向于使用非受检异常。对于可恢复异常、业务异常，比如提现金额大于余额的异常，我们更倾向于使用受检异常，明确告知调用者需要捕获处理。
+
+
+
+总之，是否往上继续抛出，要看上层代码是否关心这个异常。关心就将它抛出，否则就直接吞掉。是否需要包装成新的异常抛出，看上层代码是否能理解这个异常、是否业务相关。如果能理解、业务相关就可以直接抛出，否则就封装成新的异常抛出
+
+| **异常类型** | **应该捕获？** | **原因** |
+| ------------ | -------------- | -------- |
+|              |                |          |
+
+| **业务逻辑异常** | 是   | 调用者可以提供明确的补救或反馈。 |
+| ---------------- | ---- | -------------------------------- |
+|                  |      |                                  |
+
+| **可恢复异常** | 是   | 可以通过逻辑重试或恢复，比如网络超时、资源暂时不可用。 |
+| -------------- | ---- | ------------------------------------------------------ |
+|                |      |                                                        |
+
+| **资源清理相关异常** | 是   | 捕获异常以确保资源（文件、数据库连接等）正确释放。 |
+| -------------------- | ---- | -------------------------------------------------- |
+|                      |      |                                                    |
+
+| **编程错误** | 否   | 应通过修复代码避免，而不是捕获处理。 |
+| ------------ | ---- | ------------------------------------ |
+|              |      |                                      |
+
+| **不可恢复的系统异常** | 否   | 表示系统运行的致命问题，无法在当前上下文解决，应显式暴露或交由全局异常处理器记录日志。 |
+| ---------------------- | ---- | ------------------------------------------------------------ |
+|                        |      |                                                              |
+
+| **无意义的异常捕获（吃掉异常）** | 否   | 隐藏问题可能导致更严重的错误或行为异常，应避免捕获后无处理逻辑的情况。 |
+| -------------------------------- | ---- | ------------------------------------------------------------ |
+|                                  |      |                                                              |
+
+
+
+
+
+```
+web容器
+	filter
+		servlet
+			interceptor
+				controller 
+```
+
+
+
+
+
+面向对象设计与实现一般可以分为四个步骤：划分职责识别类、定义属性和方法、定义类之间的交互关系、组装类并提供执行入口
+
+所谓 Single Dispatch，指的是执行哪个对象的方法，根据对象的运行时类型来决定；执行对象的哪个方法，根据方法参数的编译时类型来决定。所谓 Double Dispatch，指的是执行哪个对象的方法，根据对象的运行时类型来决定；执行对象的哪个方法，根据方法参数的运行时类型来决定。
+
+设计原则和思想比设计模式更加普适和重要，掌握原则和思想可以创造新的设计模式
+
+框架的作用：隐藏实现细节、降低开发难度、代码复用、解耦非业务代码
+
+# 设计模式
+
+- 创建型：将创建和使用代码解耦
+  1. 单例：创建全局唯一
+  2. 工厂：创建不同但相关的对象（继承同一父类或接口的子类）
+  3. 建造者：创建复杂对象
+  4. 原型：创建成本较大的对象，利用复制
+
+- 结构型：是将不同功能代码解耦
+  	1. 代理：为了扩展与原始功能无关的功能或控制访问
+  	1. 桥接：接口和实现分离，独立的改变
+  	1. 装饰器：增强原始功能，支持嵌套
+  	1. 适配器：改变接口，提供不同的接口
+  	1. 外观：将细粒度的接口聚合成更易用的
+  	1. 组合：组织树状结构更合适
+  	1. 享元：对象属性大多相同的情况下用户共享内存：
+
+- 行为型：将不同的行为代码解耦
+
+  1. 观察者：生产-消费，event bus，解耦观察者和被观察者
+
+  2. 模板：基类定义算法框架，某些步骤推迟到子类实现
+
+     1. 回调（同步、异步）、模板区别
+
+        应用场景上，同步回调与模板差不多，异步回调类似于观察者；代码实现上，模板基于继承，回调基于组合
+
+        回调的好处：不受单继承的限制；通过匿名类创建回调对象，无需事先定义类；若模板中多个模板方法，只用到部分，往用到的模板方法注入回调对象。
+
+     2. hook和callback：前者侧重应用场景的描述，后者侧重语法层面描述
+
+  3. 策略：解耦策略的定义（一个策略接口和一组实现）、创建（策略工厂，如map缓存。若策略类有状态，则不能用map缓存，每次获取new新的）、使用（动态）
+
+     1. 除了使用map通过查表，还可以定义isSupport方法强制实现，遍历获取符合的策略
+
+  4. 责任链：包含处理器（Handler）和处理链（HandlerChain）。实现使用链表、数组都可。一般用于过滤、拦截场景，如敏感词过滤，如果禁用则执行到某一步就停，如果打码则执行完为止。
+
+  5. 状态：分支逻辑、查表、状态模式
+
+  6. 迭代器：解耦容器代码和遍历代码
+
+     两个接口：
+
+     ​	list接口：iterator，
+
+     ​	iterator接口：next、currentElement、hasNext
+
+     有for，为什么还用迭代器？
+
+     	1. 将遍历的逻辑从容器类中拆分出来，更好管理
+     	1. 复杂的对象遍历会增加开发成本，容易写错
+     	1. 多个迭代器独有各自的游标，遍历互相不受影响
+
+     支持快照模式的迭代器：
+
+     1. 每个迭代器维护一份快照数据，消耗较多内存
+     2. 容器维护每个元素的添加删除时间，迭代器维护创建迭代器的时间，只有创建时间在添加删除之间的元素，才是迭代器快照的元素
+
+  7. 访问者：解耦操作和对象本身
+
+     抽象资源类Resource(包含抽象方法accept(Visitor visotor)，子类调用vistor方法，传入自己本身)，操作接口VIsitor(包含操作资源的不同重载方法，Extractor、Compressor等实现类作为具体操作)。当需要功能扩展的时候，无需修改资源类，无需修改操作接口，只需新增具体的实现类
+
+  8. 快照（备忘录）：
+  9. 命令：将函数封装为对象，异步、延迟、排队等执行
+  10. 解释器：语法解析拆分到各个小类中
+  11. 中介：
+
+# Spring中用到的设计原则和思想
+
+1. 约定优于配置：提供默认配置，优先默认，否则自定义。如Spring JPA 表名、属性名同名默认相同；注解替代xml配置
+2. 低侵入松耦合：无需bean继承任何父类或实现任何接口，通过配置纳入IOC容器中
+3. 模块化轻量级：aop、web、test、core、bean等等
+4. 封装抽象：spring-data-redis、spring-cache、jdbc-template
+
+# Spring中用到的设计模式
+
+1. 模板：bean的初始化，交由用户自行决定初始化做什么。如@PostConstruct、destroy-method、DisposableBean、init-method、InitializingBean、BeanPostProcessor(before、after)
+2. 观察者：Event、Listener、Publisher，由ApplicationContext的实现类AbstractApplicationContext控制真正的逻辑
+3. 适配器：controller有多种方式实现，注解、实现controller接口、实现servlet，提供HandlerAdapter统一调用handle
+4. 策略：动态代理cglib和jdk实现，AopProxy是策略，JdkDynamicAopProxy和CgligAopProxy是具体实现，AopProxyFactory是工厂接口，DefaultAopProxyFactory是默认工厂，其中createAopProxy用于创建策略
+5. 组合：CompositeCacheManager管理一堆CacheManager（SimpleCacheManager、RedisCacheManager），CacheManger管理一堆Cache（CaffeineCache、RedisCahce）
+6. 装饰器：cache和数据库配合使用，需要放在同一事务中，否则可能出现一个成功一个失败，产生脏数据。TransactionAwareCacheDecorator，将所有操作委托给targetCache操作，并对写操作和删除操作添加了事务
+7. 工厂：IOC容器，BeanFactory和ApplicationContext相关
+8. 解释：SpEL
+9. 单例：singleton作用域，ioc容器内单例（通过一些机制确保，定义与注册、实例化等确保唯一）
+10. 模板：JdbcTemplate、RedisTemplate，通过回调callback实现
+11. 责任链：Servlet Filter: Filter、FilterChain，Spring Interceptor: HandlerInterceptor、HandlerExecutionChain
+
+
+
+# MyBatis中用到的设计模式
+
+1. 建造者：DefaultSqlSessionFactory，通过重载多个openSession方法，组合connection、executorType，transactionIsolationLevel、autoCommit等参数，简化创建sqlSession对象
+2. 模板：SqlSession执行sql委托给Executor，BaseExecutor抽象类实现Executor，SimpleExecutor、BatchExecutor、ReuseExecutor继承BaseExecutor。其中queryFromDatabase、flushStatements、update等方法是模板方法
+3. 解释器：SqlNode接口，IfSqlNode、TrimSqlNode等实现它，DynamicSqlSource.getBoundSql  -> sqlNode.apply(context) ，解释语法规则
+4. 单例：ErrorContext，线程内唯一单例，使用ThreadLocal
+5. 装饰器：Cache接口，PerpetualCache基础实现类，LruCache等包裹PerpetualCache，是装饰器类
+6. 迭代器：PropertyTokenizer实现了Iterator，解析配置属性
+7. 适配器：Log接口
+8. 责任链：Interceptor、InterceptorChain
+9. 代理：动态代理
+10. 工厂：SqlSessionFactoryBuilder
+
+
+
+
+
+# CodeReview
+
+
+
+代码结构是否合理、代码是否容易理解、业务是否正确、异常考虑是否全面、是否有隐藏bug、线程是否安全、性能是否满足业务需求、是否符合编码规范
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
